# vox-app

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  widget.html
.github/workflows/: ci.yml  release.yml
@/components/ui/: combobox.tsx  menubar.tsx
docs/plans/: 2026-05-15-ci-workflow-design.md  2026-05-15-github-actions-release-workflow-design.md  2026-05-15-release-helper-design.md
release/: README.md  latest.json  release-notes.md
scripts/: build-changelog.mjs  generate-updater-manifest.mjs  prepare-release.mjs
sidecar/: README.md
src/: App.tsx  index.chss.bk  index.css  vite-env.d.ts  widget.css  widget.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: event_tap.rs  lib.rs  main.rs  whisper.rs
src/components/: app-toast.tsx  glow-record-button.tsx  hotkey-picker.tsx  onboarding.tsx  settings-modal.tsx  settings-sections.ts  sidebar.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  context-menu.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  spinner.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/hooks/: use-settings-modal.ts
src/lib/: about.ts  async.ts  db.ts  native.ts
src/pages/: about.tsx  home.tsx  models.tsx  settings.tsx
src/store/: app-store.ts
